[LFTUI-86] minor ui fix - stream section top missing padding

--- a/src/sass/views/_dashboard.sass
+++ b/src/sass/views/_dashboard.sass
@@ -49,6 +49,7 @@
       left: 0
       right: 0
 
+  .half-section.stream-list-wrapper .section-top,
   .half-section.device-list-wrapper .section-top,
   .half-section.device-list-wrapper .registration-container
     padding: 
